fixed the project section overlap

--- a/src/App.css
+++ b/src/App.css
@@ -150,11 +150,7 @@ cursor: pointer;
 
 }
 
-.projects {
-  width: 100%;
-  height: 100vh;
-  color:var(--head-color);
-}
+
 .projects-title {
   font-weight: bold;
   font-size: 40px;
@@ -167,14 +163,17 @@ cursor: pointer;
 
 }
 .projects-grid{
-   height: 750px;
+  height: auto;
    width: 100vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 100px;
    font-family: var(--font-family);
-   font-size: xx-large;
+   font-size: x-large;
+   line-height: 120%;
+   color:var(--head-color);
+ 
 
  }
  img{
@@ -189,6 +188,7 @@ cursor: pointer;
   align-items: center;
   justify-content: center;
   padding: 50px;
+  border-radius: 15px;
 
  }
 
@@ -199,7 +199,7 @@ cursor: pointer;
   align-items: center;
   justify-content: center;
   border-radius: 15px;
-  padding: 20px;
+  padding: 50px;
 
 }
 
@@ -210,7 +210,7 @@ cursor: pointer;
   align-items: center;
   justify-content: center;
   border-radius: 15px;
-  padding: 20px;
+  padding: 50px;
 }
 .in1{
 width: 100vw;
